--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
     <input id="input" type="text" placeholder="URL">
     <button type="button" id="getUrl">Submit</button>
-    <p id="list"></p>
+    <ul id="list"></ul>
 </body>
 </html>
