doesnt matter if it has www or not, user can also use the format website.com instead of https://www.website.com

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <input id="input" type="text" placeholder="URL">
+    <input id="input" type="text" placeholder="example.com">
 
     <button type="button" id="getUrl">Submit</button>
     <ul id="list"></ul>
