--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <input class="border border-[#edeff1] rounded-md pl-2" id="input" type="text" placeholder="example.com">
         <button class="bg-[#f4ebe4] text-[#18212A] px-4 py-2 rounded-md" type="button" id="getUrl">Submit</button>
     </div>
+    <hr class="h-px my-4 border-0 bg-[#edeff1]">
     <ul id="list"></ul>
 </body>
 </html>
